# MiniDexed

./: .gitignore  CMakeLists.txt  build.sh  circle_dependencies_build.cmake  init_rpi4_env.sh  start_pri4_emulation.bash  toolchain_setup.cmake
.github/workflows/: build.yml
3d-enclosure/simple/: enclosure.scad  ssd1306c.wrl
cmake/: clone_soundplantage.sh  helper.cmake  prepareFS.sh  prepare_sounds.cmake  toolchain_setup.cmake
include/: effect_mixer.hpp  minilog.hpp  performanceconfig.h  uimenu.h
src/: effect_platervbstereo.cpp  effect_platervbstereo.h  fx_components.cpp  fx_components.h  kernel.cpp  mididevice.cpp  minidexed.cpp  minidexed.h  minidexed.ini  performanceconfig.cpp  performanceconfig.h  uimenu.cpp  uimenu.h
src/fx/: fx.h  mixing_console.hpp
tests/: test_cpp_performance.cpp  test_framework.cpp  test_fxLevelTuning.cpp  test_fx_components.cpp  test_fx_helper.h  test_fx_mixing_console.cpp  test_fx_mixing_console_unitary.cpp  test_fx_plate_reverb.cpp  test_fx_rack.cpp  test_fx_reverberator.cpp  test_fx_shimmer_reverb.cpp  test_unitFXTuning.cpp
